# aloha

./: .dockerignore  .gitignore  ALOHA-BUILD-CONTEXT.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  repository.yaml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-addon.yml  build.yml  test.yml
aloha/: __main__.py  app.py  bootstrap.py  config.py  public_url.py  relay_tunnel.py  telemetry.py
aloha/agent/: loop.py  types.py
aloha/auth/: crypto.py  oauth.py  wizard_data.py
aloha/backends/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  ollama.py  openai_backend.py  openrouter.py  router.py
aloha/cli/: main.py
aloha/context/: engine.py
aloha/ha/: client.py  environment.py
aloha/mcp/: auth.py  client.py  registry.py  server.py
aloha/routes/: chat.py  context_route.py  health.py  managed.py  mcp_keys_route.py  oauth_routes.py  public_url_route.py  relay_account.py  report_route.py  settings.py  skills_route.py
aloha/skills/: __init__.py
aloha/static/: index.html  manifest.webmanifest  sw.js
docs/: ARCHITECTURE.md  BETA.md  MCP_TOOLS.md  TROUBLESHOOTING.md  USER_GUIDE.md
haos-addon/: DOCS.md  Dockerfile  build.yaml  config.yaml  run.sh
packaging/: README.md
packaging/docker/: README.md  confirm.sh  docker-compose.yml
scripts/: gen_tool_docs.py
test/: README.md  conftest.py  smoke.sh
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+87 files in other folders)
