[project]
name = "aloha"
version = "0.1.0"
description = "AI agent for Home Assistant — chat with Claude, GPT, Gemini, or Ollama to build your smart home"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "anthropic>=0.28.0",
    "openai>=1.35.0",
    "google-generativeai>=0.7.0",
    "mcp>=1.0.0",
    "ruamel.yaml>=0.18.6",
    "cryptography>=42.0.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[project.scripts]
aloha = "aloha.cli.main:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["aloha*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "anyio>=4.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test/unit", "test/integration"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
